fix: fix bg rbg variable name in dark mode

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -86,7 +86,7 @@
         --inverted: var(--gray-900);
 
         --background-color: var(--gray-900);
-        --background-color-rgb: 10, 10, 10;
+        --background-color-rbg: 10,10,10;
 
         --panel-background: var(--gray-800);
         --panel-border: var(--gray-700);
